--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Roland Kawka",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "mongoose": "^5.2.17"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
