--- a/package.json
+++ b/package.json
@@ -14,22 +14,9 @@
             "browser": true
         },
         "rules": {
-            "brace-style": [
-                "error",
-                "stroustrup"
-            ],
-            "comma-dangle": [
-                "error",
-                "never"
-            ],
-            "no-unused-vars": [
-                "warn"
-            ],
-            "no-var": [
-                "off"
-            ],
-            "one-var": [
-                "off"
+            "indent": [
+              "error",
+              4
             ]
         }
     },
