--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         },
         "rules": {
             "indent": [
-              "error",
-              4
+                "error",
+                4
             ]
         }
     },
@@ -25,6 +25,8 @@
     "dependencies": {
         "cors": "^2.8.4",
         "express": "^4.16.3",
+        "express-graphql": "^0.6.12",
+        "graphql": "^14.0.2",
         "mongoose": "^5.2.17",
         "morgan": "^1.9.1"
     },
