--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "author": "Roland Kawka",
     "license": "ISC",
     "dependencies": {
+        "bcrypt-nodejs": "0.0.3",
+        "body-parser": "^1.18.3",
         "cors": "^2.8.4",
         "express": "^4.16.3",
         "express-graphql": "^0.6.12",
         "graphql": "^14.0.2",
+        "jsonwebtoken": "^8.3.0",
         "mongoose": "^5.2.17",
-        "morgan": "^1.9.1"
+        "morgan": "^1.9.1",
+        "redis": "^2.8.0"
     },
     "devDependencies": {
         "eslint": "^5.6.0",
