--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "author": "Roland Kawka",
     "license": "ISC",
     "dependencies": {
+        "@sendgrid/mail": "^6.3.1",
         "bcrypt-nodejs": "0.0.3",
         "body-parser": "^1.18.3",
         "cors": "^2.8.4",
