--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,3 +34,5 @@ services:
       DB_URI: mongodb://admin:password@db:27017
       REDIS_URI: redis://redis:6379
       JWT_SECRET: JWT_SECRET_KEY
+      SENDGRID_API_KEY: 
+      SENGRID_EMAIL_FROM:
