--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
             ]
         }
     },
+    "pre-commit": [
+        "lint"
+      ],
     "author": "Roland Kawka",
     "license": "ISC",
     "dependencies": {
@@ -39,6 +42,7 @@
         "eslint": "^5.6.0",
         "eslint-config-airbnb-base": "^13.1.0",
         "eslint-plugin-import": "^2.14.0",
-        "nodemon": "^1.18.4"
+        "nodemon": "^1.18.4",
+        "pre-commit": "^1.2.2"
     }
 }
