--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     },
     "pre-commit": [
         "lint"
-      ],
+    ],
     "author": "Roland Kawka",
     "license": "ISC",
     "dependencies": {
@@ -43,6 +43,8 @@
         "eslint-config-airbnb-base": "^13.1.0",
         "eslint-plugin-import": "^2.14.0",
         "nodemon": "^1.18.4",
-        "pre-commit": "^1.2.2"
+        "pre-commit": "^1.2.2",
+        "mocha": "^5.2.0",
+        "chai": "^4.1.2"
     }
 }
